--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <h1>Trabajando con SASS</h1>
+    <header class="header">
+      <img class="header__imagen" src="assets/img/Logo.png" alt="Logo" />
+      <ul class="header__lista">
+        <li>Especialidades</li>
+        <li>Agenda</li>
+        <li>Ubicacion</li>
+      </ul>
+    </header>
   </body>
 </html>
