Estructura Flex y importacion de variables y mixins

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       </ul>
     </header>
 
-    <div class="hero"></div>
+    <div class="hero">
+      <h1 class="hero__titulo">Clinica San jose</h1>
+      <p class="hero__texto">
+        Agenda tus citas medicas con nuestros profesionales en minutos
+      </p>
+      <button class="boton">Agendar</button>
+    </div>
   </body>
 </html>
