Estructura HTML Seccion especialidades

--- a/index.html
+++ b/index.html
@@ -23,5 +23,42 @@
       </p>
       <button class="boton">Agendar</button>
     </div>
+
+    <div class="Especialidades">
+      <h1>Especialidades</h1>
+
+      <div class="card">
+        <img class="card__imagen" src="" alt="" />
+        <h2 class="card__titulo">Titulo</h2>
+        <p class="card__texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
+          similique excepturi reprehenderit, quae perspiciatis? Adipisci,
+          voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
+          rerum natus nihil et.
+        </p>
+      </div>
+
+      <div class="card">
+        <img class="card__imagen" src="" alt="" />
+        <h2 class="card__titulo">Titulo</h2>
+        <p class="card__texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
+          similique excepturi reprehenderit, quae perspiciatis? Adipisci,
+          voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
+          rerum natus nihil et.
+        </p>
+      </div>
+
+      <div class="card">
+        <img class="card__imagen" src="" alt="" />
+        <h2 class="card__titulo">Titulo</h2>
+        <p class="card__texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
+          similique excepturi reprehenderit, quae perspiciatis? Adipisci,
+          voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
+          rerum natus nihil et.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
