Estilos seccion especialidades

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <button class="boton">Agendar</button>
     </div>
 
-    <div class="Especialidades">
-      <h1>Especialidades</h1>
+    <div class="especialidades">
+      <h1 class="especialidades__titulo">Especialidades</h1>
 
       <div class="card">
         <img class="card__imagen" src="" alt="" />
