Flex en la seccion especialidades

--- a/index.html
+++ b/index.html
@@ -27,38 +27,40 @@
     <div class="especialidades">
       <h1 class="especialidades__titulo">Especialidades</h1>
 
-      <div class="card">
-        <img class="card__imagen" src="" alt="" />
-        <h2 class="card__titulo">Titulo</h2>
-        <p class="card__texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-          similique excepturi reprehenderit, quae perspiciatis? Adipisci,
-          voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
-          rerum natus nihil et.
-        </p>
-      </div>
+      <section>
+        <div class="card">
+          <img class="card__imagen" src="" alt="" />
+          <h2 class="card__titulo">Titulo</h2>
+          <p class="card__texto">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
+            similique excepturi reprehenderit, quae perspiciatis? Adipisci,
+            voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
+            rerum natus nihil et.
+          </p>
+        </div>
 
-      <div class="card">
-        <img class="card__imagen" src="" alt="" />
-        <h2 class="card__titulo">Titulo</h2>
-        <p class="card__texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-          similique excepturi reprehenderit, quae perspiciatis? Adipisci,
-          voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
-          rerum natus nihil et.
-        </p>
-      </div>
+        <div class="card">
+          <img class="card__imagen" src="" alt="" />
+          <h2 class="card__titulo">Titulo</h2>
+          <p class="card__texto">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
+            similique excepturi reprehenderit, quae perspiciatis? Adipisci,
+            voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
+            rerum natus nihil et.
+          </p>
+        </div>
 
-      <div class="card">
-        <img class="card__imagen" src="" alt="" />
-        <h2 class="card__titulo">Titulo</h2>
-        <p class="card__texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-          similique excepturi reprehenderit, quae perspiciatis? Adipisci,
-          voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
-          rerum natus nihil et.
-        </p>
-      </div>
+        <div class="card">
+          <img class="card__imagen" src="" alt="" />
+          <h2 class="card__titulo">Titulo</h2>
+          <p class="card__texto">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
+            similique excepturi reprehenderit, quae perspiciatis? Adipisci,
+            voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
+            rerum natus nihil et.
+          </p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
