Seccion especialidades terminada

--- a/index.html
+++ b/index.html
@@ -29,35 +29,302 @@
 
       <section>
         <div class="card">
-          <img class="card__imagen" src="" alt="" />
-          <h2 class="card__titulo">Titulo</h2>
+          <img
+            class="card__imagen"
+            src="./assets/img/Cardiologia.png"
+            alt="Icono Cardiologia"
+          />
+          <h2 class="card__titulo">Cardiologo</h2>
           <p class="card__texto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-            similique excepturi reprehenderit, quae perspiciatis? Adipisci,
-            voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
-            rerum natus nihil et.
+            Especialidad médica dedicada al estudio, diagnóstico y tratamiento
+            de las enfermedades del corazón y del sistema circulatorio.
           </p>
         </div>
 
         <div class="card">
-          <img class="card__imagen" src="" alt="" />
-          <h2 class="card__titulo">Titulo</h2>
+          <img
+            class="card__imagen"
+            src="./assets/img/Neumologo.png"
+            alt="Icono neumologo"
+          />
+          <h2 class="card__titulo">Neumologo</h2>
           <p class="card__texto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-            similique excepturi reprehenderit, quae perspiciatis? Adipisci,
-            voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
-            rerum natus nihil et.
+            Especialidad médica dedicada al estudio de las enfermedades del
+            aparato respiratorio y centrada en el diagnóstico, tratamiento y
+            prevención de las enfermedades del pulmón.
           </p>
         </div>
 
         <div class="card">
-          <img class="card__imagen" src="" alt="" />
-          <h2 class="card__titulo">Titulo</h2>
+          <img
+            class="card__imagen"
+            src="./assets/img/Neurologo.png"
+            alt="Icono Neurologo"
+          />
+          <h2 class="card__titulo">Neurologo</h2>
           <p class="card__texto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-            similique excepturi reprehenderit, quae perspiciatis? Adipisci,
-            voluptas rem enim quae voluptatum, placeat aliquam itaque, atque ea
-            rerum natus nihil et.
+            Especialidad médica que trata los trastornos del sistema nervioso.
+            Se ocupa de la prevención, diagnóstico, tratamiento y rehabilitación
+            de todas las enfermedades que involucran al sistema nervioso.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Pediatra.png"
+            alt="Icono Pediatra"
+          />
+          <h2 class="card__titulo">Pediatra</h2>
+          <p class="card__texto">
+            Es la especialidad médica que estudia al niño y sus enfermedades.
+            Estudia tanto al niño sano como al enfermo.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Dermatologo.png"
+            alt="Icono Dermatologo"
+          />
+          <h2 class="card__titulo">Dermatologo</h2>
+          <p class="card__texto">
+            Especialidad médica encargada del estudio de la estructura y función
+            de la piel, así como de las enfermedades que la afectan.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Oftalmologo.png"
+            alt="Icono Oftalmologo"
+          />
+          <h2 class="card__titulo">Oftalmologo</h2>
+          <p class="card__texto">
+            Es la especialidad médica que estudia las enfermedades de ojo y su
+            tratamiento, incluyendo el globo ocular, su musculatura, el sistema
+            lagrimal y los párpados.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Traumatologo.png"
+            alt="Icono Traumatologo"
+          />
+          <h2 class="card__titulo">Traumatologo</h2>
+          <p class="card__texto">
+            Es la rama de la medicina que se dedica al estudio de las lesiones
+            del aparato locomotor, abarca el estudio de las enfermedades
+            congénitas o adquiridas.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Ginecologo.png"
+            alt="Icono Ginecologo"
+          />
+          <h2 class="card__titulo">Ginecologo</h2>
+          <p class="card__texto">
+            La especialidad médica y quirúrgica que trata las enfermedades del
+            sistema reproductor femenino (útero, vagina y ovarios).
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Psiquiatra.png"
+            alt="Icono Psiquiatra"
+          />
+          <h2 class="card__titulo">Psiquiatra</h2>
+          <p class="card__texto">
+            Especialidad médica dedicada al estudio de los trastornos mentales
+            de origen genético o neurológico con el objetivo de prevenir,
+            evaluar, diagnosticar, tratar y rehabilitar.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Otorrinolaringologo.png"
+            alt="Icono Otorrinolaringologo"
+          />
+          <h2 class="card__titulo">Otorrinolaringologo</h2>
+          <p class="card__texto">
+            Es la especialidad médica que se encarga de la prevención,
+            diagnóstico y tratamiento de las enfermedades del oído, la nariz y
+            la garganta.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Urologo.png"
+            alt="Icono Urologo"
+          />
+          <h2 class="card__titulo">Urologo</h2>
+          <p class="card__texto">
+            Especialidad médico-quirúrgica que se ocupa del estudio, diagnóstico
+            y tratamiento de las patologías que afectan al aparato urinario y
+            reproductor masculino.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Gastroenterologo.png"
+            alt="Icono Gastroenterologo"
+          />
+          <h2 class="card__titulo">Gastroenterologo</h2>
+          <p class="card__texto">
+            Es la especialidad médica que se ocupa de las enfermedades del
+            aparato digestivo y órganos asociados, como el esófago, estómago,
+            hígado y páncreas.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Endocrinologo.png"
+            alt="Icono Endocrinologo"
+          />
+          <h2 class="card__titulo">Endocrinologo</h2>
+          <p class="card__texto">
+            Es una disciplina de la medicina que estudia el sistema endocrino y
+            las enfermedades provocadas por un funcionamiento inadecuado del
+            mismo.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Oncologo.png"
+            alt="Icono Oncologo"
+          />
+          <h2 class="card__titulo">Oncologo</h2>
+          <p class="card__texto">
+            Es la especialidad médica que se dedica al diagnóstico y tratamiento
+            del cáncer. Es el especialista que atiende a los enfermos de cáncer.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Reumatologo.png"
+            alt="Icono Reumatologo"
+          />
+          <h2 class="card__titulo">Reumatologo</h2>
+          <p class="card__texto">
+            Es la especialidad médica que se encarga de prevenir, diagnosticar y
+            tratar las enfermedades musculoesqueléticas y autoinmunes
+            sistémicas.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Nefrologo.png"
+            alt="Icono Nefrologo"
+          />
+          <h2 class="card__titulo">Nefrologo</h2>
+          <p class="card__texto">
+            Especialidad médica que se ocupa del estudio de la estructura y la
+            función renal, incluyendo la prevención, diagnóstico y tratamiento
+            de las enfermedades renales.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Hematologo.png"
+            alt="Icono Hematologo"
+          />
+          <h2 class="card__titulo">Hematologo</h2>
+          <p class="card__texto">
+            La hematología es la especialidad médica que se dedica al
+            tratamiento de los pacientes con enfermedades de la sangre o
+            hematológicas.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Alergologo.png"
+            alt="Icono Alergologo"
+          />
+          <h2 class="card__titulo">Alergologo</h2>
+          <p class="card__texto">
+            Especialidad médica que comprende el conocimiento, diagnóstico y
+            tratamiento de la patología producida por mecanismos inmunológicos,
+            especialmente de hipersensibilidad.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/MedicinaGeneral.png"
+            alt="Icono Medico General"
+          />
+          <h2 class="card__titulo">Medico General</h2>
+          <p class="card__texto">
+            El médico general es el profesional que cuenta con los conocimientos
+            para diagnosticar y resolver la mayoría de los padecimientos
+            comunes.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Nutriologo.png"
+            alt="Icono Nutriologo"
+          />
+          <h2 class="card__titulo">Nutriologo</h2>
+          <p class="card__texto">
+            Profesional de la salud capaz de evaluar el estado de nutrición de
+            los individuos y determinar el plan de alimentación requerido.
+          </p>
+        </div>
+
+        <div class="card">
+          <img
+            class="card__imagen"
+            src="./assets/img/Odontologo.png"
+            alt="Icono Odontologo"
+          />
+          <h2 class="card__titulo">Odontologo</h2>
+          <p class="card__texto">
+            Es la rama de las ciencias de la salud que se encarga del
+            diagnóstico, tratamiento y prevención de las enfermedades del
+            aparato estomatognático (dientes, encías, mandíbula).
           </p>
         </div>
       </section>
