--- a/index.html
+++ b/index.html
@@ -329,5 +329,137 @@
         </div>
       </section>
     </div>
+
+    <div class="agenda">
+      <h1 class="agenda__titulo">Agende una cita medica</h1>
+      <section>
+        <select class="agenda__select" name="Especialidad" id="especialidad">
+          <option class="agenda__option" value="" disabled selected>
+            Selecciona una especialidad
+          </option>
+          <option class="agenda__option" value="cardiologo">Cardiologo</option>
+          <option class="agenda__option" value="neumologo">Neumologo</option>
+          <option class="agenda__option" value="neurologo">Neurologo</option>
+          <option class="agenda__option" value="pediatra">Pediatra</option>
+          <option class="agenda__option" value="dermatologo">
+            Dermatologo
+          </option>
+          <option class="agenda__option" value="oftalmologo">
+            Oftalmologo
+          </option>
+          <option class="agenda__option" value="traumatologo">
+            Traumatologo
+          </option>
+          <option class="agenda__option" value="ginecologo">Ginecologo</option>
+          <option class="agenda__option" value="psiquiatra">Psiquiatra</option>
+          <option class="agenda__option" value="otorrinolaringologo">
+            Otorrinolaringologo
+          </option>
+          <option class="agenda__option" value="urologo">Urologo</option>
+          <option class="agenda__option" value="gastroenterologo">
+            Gastroenterologo
+          </option>
+          <option class="agenda__option" value="endocrinologo">
+            Endocrinologo
+          </option>
+          <option class="agenda__option" value="oncologo">Oncologo</option>
+          <option class="agenda__option" value="reumatologo">
+            Reumatologo
+          </option>
+          <option class="agenda__option" value="nefrologo">Nefrologo</option>
+          <option class="agenda__option" value="hematologo">Hematologo</option>
+          <option class="agenda__option" value="alergologo">Alergologo</option>
+          <option class="agenda__option" value="medico_general">
+            Medico General
+          </option>
+          <option class="agenda__option" value="nutriologo">Nutriologo</option>
+          <option class="agenda__option" value="odontologo">Odontologo</option>
+        </select>
+
+        <select class="agenda__select" name="Doctores" id="">
+          <option class="agenda__option" value="" disabled selected>
+            Selecciona un doctor
+          </option>
+          <option class="agenda__option" value="dr_perez">
+            Dr. Juan Pérez
+          </option>
+          <option class="agenda__option" value="dra_gonzalez">
+            Dra. María González
+          </option>
+          <option class="agenda__option" value="dr_rodriguez">
+            Dr. Carlos Rodríguez
+          </option>
+          <option class="agenda__option" value="dra_fernandez">
+            Dra. Ana Fernández
+          </option>
+          <option class="agenda__option" value="dr_lopez">
+            Dr. Luis López
+          </option>
+          <option class="agenda__option" value="dra_martinez">
+            Dra. Sofia Martínez
+          </option>
+          <option class="agenda__option" value="dr_sanchez">
+            Dr. Pedro Sánchez
+          </option>
+          <option class="agenda__option" value="dra_ramirez">
+            Dra. Laura Ramírez
+          </option>
+          <option class="agenda__option" value="dr_torres">
+            Dr. Miguel Torres
+          </option>
+          <option class="agenda__option" value="dra_flores">
+            Dra. Elena Flores
+          </option>
+        </select>
+        <select name="fecha" class="agenda__select">
+          <option class="agenda__option" value="" disabled selected>
+            Selecciona una fecha
+          </option>
+          <option class="agenda__option" value="2026-01-20">
+            20 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-21">
+            21 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-22">
+            22 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-23">
+            23 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-24">
+            24 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-26">
+            26 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-27">
+            27 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-28">
+            28 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-29">
+            29 de Enero, 2026
+          </option>
+          <option class="agenda__option" value="2026-01-30">
+            30 de Enero, 2026
+          </option>
+        </select>
+        <select name="hora" class="agenda__select">
+          <option class="agenda__option" value="" disabled selected>
+            Selecciona una hora
+          </option>
+          <option class="agenda__option" value="09:00">09:00 AM</option>
+          <option class="agenda__option" value="10:00">10:00 AM</option>
+          <option class="agenda__option" value="11:00">11:00 AM</option>
+          <option class="agenda__option" value="12:00">12:00 PM</option>
+          <option class="agenda__option" value="14:00">02:00 PM</option>
+          <option class="agenda__option" value="15:00">03:00 PM</option>
+          <option class="agenda__option" value="16:00">04:00 PM</option>
+          <option class="agenda__option" value="17:00">05:00 PM</option>
+        </select>
+      </section>
+    </div>
   </body>
 </html>
