Boton finalizado y seccion citas medicas listas

--- a/index.html
+++ b/index.html
@@ -460,6 +460,8 @@
           <option class="agenda__option" value="17:00">05:00 PM</option>
         </select>
       </section>
+
+      <button class="boton boton--agenda">Agendar</button>
     </div>
   </body>
 </html>
