--- a/index.html
+++ b/index.html
@@ -463,5 +463,18 @@
 
       <button class="boton boton--agenda">Agendar</button>
     </div>
+
+    <footer class="footer">
+      <p class="footer__texto">Contacto: atencion@clinicasanjose.com</p>
+      <p class="footer__texto">Tel: +1 9538517 456</p>
+      <div class="footer__links">
+        <p class="footer__links_texto">Instagram</p>
+        <p class="footer__links_texto">Facebook</p>
+        <p class="footer__links_texto">Twitter</p>
+      </div>
+      <p class="footer__copyright">
+        © 2026 Clinica San Jose. Todos los derechos reservados.
+      </p>
+    </footer>
   </body>
 </html>
